Aplicando stash e restaurando mudanças